fix the text overflow problem

--- a/app/assets/stylesheets/component/editor.scss
+++ b/app/assets/stylesheets/component/editor.scss
@@ -11,6 +11,7 @@
 
 .RichEditor-editor {
   border-top: 1px solid #ddd;
+  width: 63%;
   cursor: text;
   font-size: 16px;
   margin-top: 10px;
